package com.promecarus.githubusercompose.ui.helper

object TestTag {
    const val LOADING = "Loading"
    const val SEARCH_BAR = "SearchBar"
    const val BACK = "Back"
    const val FAB_SETTING = "FabSetting"
    const val FAB_FAVORITE = "FabFavorite"
    const val FAB_CLEAR_FAVORITE = "FabClearFavorite"
}
