...
    DetailScreen(
        stateDetail = State.Success(
            Detail(
                id = 34930290,
                username = "promecarus",
                avatarUrl = "https://avatars.githubusercontent.com/u/34930290?v=4",
                name = "Muhammad Haikal Al Rasyid",
                email = "haikalslipi@gmail.com"
            )
        ), stateFollowing = State.Success(emptyList()), stateFollowers = State.Success(emptyList())
    )
}

